Bug 119841 - Crash when pasting an HTML table from a web page
Summary: Crash when pasting an HTML table from a web page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2018-09-13 12:16 UTC by Buovjaga
Modified: 2018-09-18 16:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash with master (22.67 KB, text/plain)
2018-09-13 12:16 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-09-13 12:16:15 UTC
Created attachment 144835 [details]
GDB trace of crash with master

Was testing an older report, which included as a step: select the table in this page and paste to Calc https://en.wikipedia.org/wiki/List_of_countries_by_population_growth_rate

Now pasting the table causes immediate crash. Both on Linux and Windows.

Bisected with win32-6.2 to https://cgit.freedesktop.org/libreoffice/core/commit/?id=510033783a9921eef507d424fc5adf6e2696bc4a
loplugin:useuniqueptr in ScHTMLLayoutParser

Adding Cc: to Noel Grandin
Comment 1 Xisco Faulí 2018-09-13 13:31:29 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: d92b0efe58b77247e1e5292c1a989baa934df797
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 2 Commit Notification 2018-09-14 10:55:30 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f90e32c06b206390455a1f3bf5c0892ef59ec89d

tdf#119841 Crash when pasting an HTML table from a web page

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-09-18 16:17:45 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 2419fa71d8b2223a50f596d5db7721f6213d4f87
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Noel Grandin, Thanks for fixing this!!