tdf#119841 Crash when pasting an HTML table from a web page

regression from
    commit 510033783a9921eef507d424fc5adf6e2696bc4a
    loplugin:useuniqueptr in ScHTMLLayoutParser

Change-Id: If2c46552d8c784eb2ea1b182140fd731c39b1bd3